cluster/eu-de-01/udl/stats/api/api.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: udl-stats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: ghcr.io/udl-tf/udlstats-api:main # Update with actual image
          command: ["python", "app.py", "--host", "0.0.0.0"]
          ports:
            - containerPort: 8765
              name: api
            - containerPort: 8766
              name: api-alt
            - containerPort: 27100
              protocol: UDP
              name: udp
          volumeMounts:
            - name: demos
              mountPath: /demos
            - name: outputs
              mountPath: /outputs
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
      volumes:
        - name: demos
          hostPath:
            path: /mnt/udl-stats/demos
            type: DirectoryOrCreate
        - name: outputs
          hostPath:
            path: /mnt/udl-stats/outputs
            type: DirectoryOrCreate
