cluster/eu-de-01/udl/stats/api/api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: udl-stats
spec:
  selector:
    app: api
  ports:
    - name: api
      port: 8765
      targetPort: 8765
      protocol: TCP
    - name: api-alt
      port: 8766
      targetPort: 8766
      protocol: TCP
  type: ClusterIP
